--- a/samples/ClientSide/Pages/Index.razor
+++ b/samples/ClientSide/Pages/Index.razor
@@ -2,6 +2,12 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome to Skclusive.Mobx.Component counter demo
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>Counters have a highlighter to visualize each root counter component rendering</p>
+
+<RegularCounter />
+
+<PureCounter />
+
+<ObserverCounter />
