--- a/samples/ClientSide/Components/ObserverCounter.razor
+++ b/samples/ClientSide/Components/ObserverCounter.razor
@@ -1,4 +1,5 @@
-﻿@using Skclusive.Mobx.Component
+﻿@using Skclusive.Core.Component
+@using Skclusive.Mobx.Component
 @using Skclusive.Mobx.Observable
 
 @inherits PureComponentBase
