--- a/samples/ClientSide/Components/PureCounter.razor
+++ b/samples/ClientSide/Components/PureCounter.razor
@@ -1,4 +1,5 @@
-﻿@using Skclusive.Mobx.Component
+﻿@using Skclusive.Core.Component
+@using Skclusive.Mobx.Component
 
 @inherits PureComponentBase
 
