--- a/samples/CounterApp/_Imports.razor
+++ b/samples/CounterApp/_Imports.razor
@@ -3,6 +3,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using ClientSide
-@using ClientSide.Shared
-@using ClientSide.Components
+@using CounterApp
+@using CounterApp.Shared
+@using CounterApp.Components
