--- a/samples/CounterApp/Components/RegularCounter.razor
+++ b/samples/CounterApp/Components/RegularCounter.razor
@@ -1,6 +1,8 @@
 ﻿<Highlighter>
     <h1>Regular Counter</h1>
-    <p>Current count: @currentCount</p>
+    <Count>
+        <p>Counter count: @currentCount</p>
+    </Count>
     <button class="btn btn-primary" @onclick="IncrementCount">
         Click me
     </button>
